--- a/app/src/main/res/layout/view_renderable_text.xml
+++ b/app/src/main/res/layout/view_renderable_text.xml
@@ -6,6 +6,8 @@
     <TextView
         android:id="@+id/viewRenderableText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        style="@style/TitleTheme"
+        android:background="@android:color/white"/>
 
 </LinearLayout>
