initial version of ar task

--- a/app/src/main/res/layout/fragment_ar.xml
+++ b/app/src/main/res/layout/fragment_ar.xml
@@ -16,10 +16,21 @@
         android:id="@+id/exitButtonAr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/complete_cache"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:text="@string/complete_cache"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/scoreCounter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:padding="8dp"
+        android:text="@string/ar_fragment_counter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/ScoreCounterTheme"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
