--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,11 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="ScoreCounterTheme" parent="AppTheme">
+        <item name="android:textSize">18sp</item>
+        <item name="android:background">@color/colorPrimary</item>
+    </style>
+
     <style name="LoginTheme" parent="AppTheme">
         <item name="android:windowBackground">@android:color/white</item>
     </style>
